Minor updates to paper.

--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -67,7 +67,7 @@
 Owing to increases in computing resources [\todo: change this], there is growing interest in performing Bayesian inference 
 in settings where evaluation of the likelihood function incurs significant computational expense. This situation commonly 
 arises across various disciplines in the physical and engineering sciences, whereby evaluating the likelihood 
-implies performing a complex computer simulation \citep{ESM_modeling_2pt0}. Such computer models often derive from 
+implies performing a complex computer simulation; e.g., \citep{ESM_modeling_2pt0}. Such computer models often derive from 
 systems of differential equations, with the goal being to calibrate (i.e., estimate) unknown parameters characterizing the physical model.
 To address this computational bottleneck, a wide body of research has emerged that seeks to characterize the Bayesian 
 posterior distribution over model parameters while minimizing the number of required likelihood evaluations. 
